# CorneaController

./: .gitignore  CMakeLists.txt  CorneaController.pro  README.md  build_release.bat  cornea_config.example.json  stress_test.ps1  stress_test_mt.py  stress_test_multi_panel.py  test_tcp.ps1
docs/: ENV.md  INTEGRATION_GUIDE.md  TCP API.md  TCP API_106.md
python/: panel_worker.py  smoke_test_worker.py
scripts/: bench_concurrent_cascade.py  bench_n_panel_scan.py
src/: corneaconfig.cpp  corneaconfig.h  corneacontroller.cpp  corneacontroller.h  corneawidget.cpp  corneawidget.h  corneawidget.ui  devicecontrolpanel.cpp  devicecontrolpanel.h  imageloader.cpp  imageloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panelsubprocess.cpp  panelsubprocess.h  pythonbridge.cpp  pythonbridge.h  tcpserver.cpp  tcpserver.h
